EZ-1133 fix breadcrumbs wrapping

--- a/wui/static/css/main.css
+++ b/wui/static/css/main.css
@@ -170,6 +170,7 @@ nav.crumb-wrap {
     margin: 1rem;
     height: unset;
     min-height: 5rem;
+    width: unset;
 }
 
 nav.crumb-wrap .breadcrumb {
